change `height` to `min-height` to prevent overflowing

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,7 +1,7 @@
 @import '../sass/media-queries.scss';
 
 .layout {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
